styles/home.scss
@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
@import url('https://fonts.googleapis.com/css?family=Lobster');

$lightBackgroundColor: #403F4C;
$darkBackgroundColor: #1B2432;
$borderColor: #121420;
$orange: #B76D68;
$offWhite: #fbf7f5;

* {
  box-sizing: border-box;
}

body {
  background: $lightBackgroundColor;
  color: $offWhite;
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
}

.chatbar {
  background: $darkBackgroundColor;
  border-top: 1px solid $borderColor;
  bottom: 0;
  display: flex;
  left: 0;
  padding: 5px;
  position: fixed;
  right: 0;
  width: 80%;
}

.chatbar-message,
.chatbar-username {
  border: 1px solid $borderColor;
  border-radius: 10px;
  background-color: $offWhite;
  display: block;
  height: 40px;
  line-height: 40px;
  margin: 5px;
  padding: 0 9px;
}

.chatbar-message {
  flex: 8;
}

.chatbar-username {
  flex: 2;
}

.message-container {
  display: flex;
}

.messages {
  width: 80%;
  margin-top: 60px;
}

.user-list-container {
  width: 20%;
  height: 100%;
  border-left: 1px solid $borderColor;
  position: fixed;
  right: 0;
}

.user-list-header {
  height: 60px;
  background-color: $darkBackgroundColor;
  border-bottom: 1px solid $borderColor;
  color: $orange;
  text-align: center;
  line-height: 60px;
  font-size: 16px;
}

.user-list {
  padding-left: 15px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.message {
  display: flex;
  padding: 5px;
}

.message-system {
  font-style: italic;
  padding: 5px 20px;
}

.message-content,
.message-username {
  overflow: hidden;
  margin: 5px;
  padding: 0 10px;
}

.message-content {
  flex: 8;
}

.message-username {
  flex: 2;
  font-weight: 700;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.navbar {
  background: $darkBackgroundColor;
  color: $orange;
  border-bottom: 1px solid $borderColor;
  height: 60px;
  width: 80%;
  left: 0;
  padding: 0 10px;
  position: fixed;
  right: 0;
  top: 0;
}

.navbar-brand {
  font-family: 'Lobster', cursive;
  color: inherit;
  display: block;
  float: left;
  font-weight: 400;
  font-size: 42px;
  height: 60px;
  line-height: 60px;
  padding: 0 10px;
  text-decoration: none;
}

.navbar-user-count {
  float: right;
}

img {
  max-width: 60%;
  height: auto;
}

#emoji-toggle {
  width: 25px;
  height: auto;
  opacity: 0.35;
  position: fixed;
  bottom: 2.4%;
  right: 22%;
}

#emoji-toggle:hover {
  cursor: pointer;
}

#emoji-picker {
  position: fixed;
  bottom: 62px;
  right: 20%;
}

